--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,21 @@
 <h1>ΣΚΑΚΙ</h1>
 <div id='chess_board'>
 </div>
+
+<div id='game_initializer'>
+  <input id='username'> 
+  <select id='pcolor'>
+  <option value='W'>W</option>
+  <option value='B'>B</option>
+  </select>
+  <button id='chess_login' class='btn btn-primary'>ΕΙΣΟΔΟΣ ΣΤΟ ΠΑΙΧΝΙΔΙ</button><br>
+  </div>
+
+
+  <div id='game_info'>
+  </div>
+
+  
 <button id='chess_reset' class='btn btn-primary'>ΕΝΑΡΞΗ</button><br>
 
 </body>
